force-app/main/default/objects/GL_Code_Line_Item__c/GL_Code_Line_Item__c.object-meta.xml
<CustomObject>
    <description>GL Code Line Item</description>
    <label>GL Code Line Item</label>
    <nameField>
        <displayFormat>GLI-{000000}</displayFormat>
        <label>GL Code Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Code Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>