force-app/main/default/objects/GL_Code_Line_Item__c/fields/Amended_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Amended_Explanation__c</fullName>
    <description>Refers to the providers amended explanation</description>
    <label>Amended Explanation</label>
    <type>TextArea</type>
</CustomField>