force-app/main/default/objects/GL_Code_Line_Item__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GL Code</description>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>GL Code Line Items</relationshipLabel>
    <relationshipName>GL_Code_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>