force-app/main/default/objects/GL_Code_Line_Item__c/fields/Line_Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Value__c</fullName>
    <description>To store the values entered by Provider for each data table cell.</description>
    <label>Line Item Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>