force-app/main/default/objects/GL_Code_Line_Item__c/fields/provider_explanation__c.field-meta.xml
<CustomField>
    <fullName>provider_explanation__c</fullName>
    <label>Provider Explanation</label>
    <type>TextArea</type>
</CustomField>