force-app/main/default/objects/GL_Code_Line_Item__c/fields/QA_External_Comments__c.field-meta.xml
<CustomField>
    <fullName>QA_External_Comments__c</fullName>
    <description>Refers to QA Assessors external comments for rejected provider explanation</description>
    <label>QA External Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>