force-app/main/default/objects/GL_Code_Line_Item__c/fields/QA_Outcome__c.field-meta.xml
<CustomField>
    <fullName>QA_Outcome__c</fullName>
    <description>QA outcome for QA Assessors to select on each provider explanation they review</description>
    <label>QA Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Reject - Low Percentage of Non-Care Wages</fullName>
            </value>
            <value>
                <fullName>Reject - Only 3 Months of Data</fullName>
            </value>
            <value>
                <fullName>Reject - Pay Periods</fullName>
            </value>
            <value>
                <fullName>Reject - Agency Staff not Included as Wages in QFS</fullName>
            </value>
            <value>
                <fullName>Reject - Total and Care Wages are Equal</fullName>
            </value>
            <value>
                <fullName>Reject - YTD Wages are less than QTR Wages</fullName>
            </value>
            <value>
                <fullName>Reject - Alternative EOFY</fullName>
            </value>
            <value>
                <fullName>Reject - Care Wages are Greater than Total Wages</fullName>
            </value>
            <value>
                <fullName>Reject - Higher than Usual RN Hours</fullName>
            </value>
            <value>
                <fullName>Reject - Zero PCW Hours</fullName>
            </value>
            <value>
                <fullName>Reject - No Reference to Sick or Annual Leave</fullName>
            </value>
            <value>
                <fullName>Reject - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>