force-app/main/default/objects/GL_Code_Line_Item__c/fields/Service_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Service_Line_Item__c</fullName>
    <label>Service Line Item</label>
    <referenceTo>Service_Line_Item__c</referenceTo>
    <relationshipLabel>GL Code Line Items</relationshipLabel>
    <relationshipName>GL_Code_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>