force-app/main/default/objects/GL_Code_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GL_Code__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GL_Code__c</field>
        <operation>contains</operation>
        <value>total labour</value>
    </filters>
    <label>All</label>
</ListView>